--- a/Backend/code/pom.xml
+++ b/Backend/code/pom.xml
@@ -141,6 +141,17 @@
             <version>30.1-jre</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.citrus</groupId>
+            <artifactId>citrus-webx-all</artifactId>
+            <version>3.1.6</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
