--- a/Backend/code/pom.xml
+++ b/Backend/code/pom.xml
@@ -152,6 +152,18 @@
             <version>3.1.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
